--- a/conf/application.conf
+++ b/conf/application.conf
@@ -42,5 +42,4 @@ play.i18n.langs = [ "en" ]
 
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
-producer.url = "localhost:9000/produce"
-consumer.url = "localhost:9000/consume"
+server.url = "http://localhost:9000/"
